# tamago

./: AUTHORS  ChangeLog  ChangeLog.1997-1998  ChangeLog.2002-2004  Makefile.am  Makefile.in  README  README.ja.txt  config.h.in  configure  configure.ac  docomp.el  egg-cnv.el  egg-com.el  egg-edep.el  egg-mlh.el  egg-sim.el  egg-x0213.el  egg.el  elisp.mk  its.el  leim-list.el  menudiag.el
egg/: Makefile.am  Makefile.in  anthy.el  anthyipc.el  canna.el  canna.el.in  cannarpc.el  sj3.el  sj3rpc.el  wnn.el  wnn.el.in  wnnrpc.el
helper/: Makefile  Makefile.am  Makefile.in  egg-helper.c
its/: Makefile.am  Makefile.in  bixing.el  erpin.el  greek.el  hangul.el  hankata.el  hira.el  jiskana.el  quanjiao.el  zenkaku.el  zhuyin.el
